--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,44 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
+.root{
+  display: flex; 
+  height: 30rem;
   flex-direction: column;
+  width : 100%;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+
+.person{
+  display: flex;
+  justify-content: space-between;
+  width: 500px;
+  padding: 1rem;
+  margin-bottom: 1rem;
+  border-radius: 7px;
+  background-color: rgb(10, 61, 119);
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3), -5px -5px 10px rgba(0, 0, 0, 0.3);
+}
+.person-right p {
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.person-left{
+  width: 120px;
+  height: 120px;
+  background-color: white;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.button-display-container{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 370px; 
+}
+.button-display-container button{
+  color: white;
+  font-size: 16px;
+  width: 135px;
+  height:40px;
+  border: none;
+  border-radius: 8px;
+  background-color: #1e0d81;
+  cursor: pointer;
 }
